--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "type": "git",
     "url": "git+https://github.com/1nside0ut/wings.git"
   },
+  "author": "\"Manuel Barzi\" <manuelbarzi@gmail.com>",
   "license": "MIT",
   "devDependencies": {
     "grunt": "~0.4.5",
