--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wings",
-  "title": "Wings",
+  "title": "WingsJS",
   "description": "JavaScript UI framework that draws on canvas, inspired on Java Swing.",
   "version": "0.1.0",
   "homepage": "http://1nside0ut.com/wings/",
