--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
-  "name": "wings",
-  "title": "WingsJS",
-  "description": "JavaScript UI framework that draws on canvas, inspired on Java Swing.",
-  "version": "0.0.1",
-  "homepage": "http://1nside0ut.com/wings-js/",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/1nside0ut/wings-js.git"
-  },
-  "author": "manuelbarzi",
-  "license": "MIT",
-  "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-contrib-clean": "^1.0.0",
-    "grunt-contrib-connect": "^0.11.2",
-    "grunt-contrib-copy": "^0.8.2",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-nodeunit": "~0.4.1",
-    "grunt-contrib-rename": "0.0.3",
-    "grunt-contrib-sass": "^0.9.2",
-    "grunt-contrib-uglify": "~0.5.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-string-replace": "^1.2.1"
-  }
+    "name": "wings-js",
+    "shortname": "wings",
+    "title": "WingsJS",
+    "description": "JavaScript UI framework that draws on canvas, inspired on Java Swing.",
+    "version": "0.0.1",
+    "homepage": "http://1nside0ut.com/wings-js/",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/1nside0ut/wings-js.git"
+    },
+    "author": "manuelbarzi",
+    "license": "MIT",
+    "devDependencies": {
+        "grunt": "~0.4.5",
+        "grunt-contrib-clean": "^1.0.0",
+        "grunt-contrib-connect": "^0.11.2",
+        "grunt-contrib-copy": "^0.8.2",
+        "grunt-contrib-jshint": "^0.12.0",
+        "grunt-contrib-nodeunit": "~0.4.1",
+        "grunt-contrib-rename": "0.0.3",
+        "grunt-contrib-sass": "^0.9.2",
+        "grunt-contrib-uglify": "~0.5.0",
+        "grunt-contrib-watch": "^0.6.1",
+        "grunt-jsbeautifier": "^0.2.13",
+        "grunt-string-replace": "^1.2.1"
+    }
 }
