--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
     "name": "wings-js",
     "shortname": "wings",
     "title": "WingsJS",
-    "description": "JavaScript UI framework that draws on canvas, inspired on Java Swing.",
-    "version": "0.0.1",
+    "description": "JavaScript UI framework that draws on HTML5 Canvas, inspired by Java Swing.",
+    "version": "0.0.2",
     "homepage": "http://1nside0ut.com/wings-js/",
     "repository": {
         "type": "git",
