--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "wings-js",
     "shortname": "wings",
     "title": "WingsJS",
-    "description": "JavaScript UI framework that draws on HTML5 Canvas, inspired by Java Swing.",
+    "description": "JavaScript UI framework that draws on HTML5 Canvas.",
     "version": "0.0.3",
     "homepage": "http://1nside0ut.com/wings-js/",
     "repository": {
