--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
     "name": "wings-js",
     "shortname": "wings",
     "title": "WingsJS",
-    "description": "JavaScript UI framework that draws on HTML5 Canvas.",
-    "version": "0.0.3",
+    "description": "Object-Oriented JavaScript UI framework that draws on HTML5 Canvas.",
+    "version": "0.0.4",
     "homepage": "http://1nside0ut.com/wings-js/",
     "repository": {
         "type": "git",
