--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@b00tc4mp/wings",
     "description": "Object-oriented Component-based UI JavaScript library for HTML Canvas (inspired by Java Swing)",
-    "version": "1.0.2",
+    "version": "1.1.0",
     "homepage": "https://b00tc4mp.github.io/wings",
     "repository": {
         "type": "git",
@@ -18,6 +18,7 @@
         }
     },
     "scripts": {
-        "build": "node build"
+        "build": "node build",
+        "publish": "npm publish --access public"
     }
 }
